_frontend/src/styles/oruga-customization.css
/* SPDX-License-Identifier: Apache-2.0 */

/*  ============================================================================
    Oruga customization
*/
:root {
    --oruga-base-font-size: 14px;
    --oruga-select-color: var(--text-primary);
    --oruga-select-background-color: var(--background-tertiary);
    --oruga-select-border-color: var(--text-primary);
    --oruga-select-border-radius: 4px;
    --oruga-select-arrow-size: 0.75rem;
    --oruga-select-height: 26px;
    --oruga-select-line-height: 1;
    --oruga-select-padding: 0 8px;
    --oruga-switch-active-background-color: var(--network-theme-color);
    --oruga-checkbox-border-color: var(--network-theme-color);
    --oruga-checkbox-background-color: var(--background-tertiary);
    --oruga-checkbox-border-width: 1px;
    --oruga-checkbox-active-background-color: var(--network-theme-color);
    --oruga-checkbox-checkmark-color: var(--background-tertiary);
    --oruga-tooltip-content-font-size: 12px;
    --oruga-tooltip-content-weight-normal: 500;
    --oruga-tooltip-color: var(--network-button-text-color);
    --oruga-tooltip-background-color: var(--network-button-color);
    --oruga-tooltip-arrow-margin: 5px;
}

.o-table__root {
    --oruga-table-background-color: var(--background-tertiary);
    --oruga-table-striped-background-color: var(--background-tertiary);
    --oruga-table-border-radius: 0;
    --oruga-table-color: var(--text-primary);
    --oruga-table-hoverable-background-color: var(--background-primary);
    --oruga-table-th-color: var(--text-secondary);
    --oruga-table-th-font-weight: 500 !important;
    --oruga-table-th-border-width: 1px;
    --oruga-table-th-border-style: solid;
    --oruga-table-th-border-color: var(--border-secondary);
    --oruga-table-td-border-width: 1px;
    --oruga-table-td-border-style: solid;
    --oruga-table-td-border-color: var(--table-border);
}

.o-pagination {
    --oruga-pagination-button-margin: 2px;
    --oruga-pagination-button-color: var(--text-primary);
    --oruga-pagination-button-border-width: 2px;
    --oruga-pagination-button-border-style: solid;
    --oruga-pagination-button-border-color: var(--background-tertiary);
    --oruga-pagination-button-border-radius: 12px;
    --oruga-pagination-button-height: 36px;
    --oruga-pagination-button-min-width: 36px;
    --oruga-pagination-button-current-color: var(--text-primary);
    --oruga-pagination-button-current-background-color: var(--background-tertiary);
    --oruga-pagination-button-current-border-color: var(--light-network-button-color);
    --oruga-pagination-button-box-shadow: none;
}

table.o-table {
    margin-bottom: 1rem;
}

table.o-table > thead > tr > th {
    font-style: normal;
    font-weight: 500;
    font-size: 12px;
    line-height: 16px;
    padding-top: 12px;
    padding-bottom: 12px;
}

table.o-table > tbody > tr > td {
    align-self: center;
    font-style: normal;
    font-weight: 400;
    font-size: 14px;
    padding-top: 16px;
    padding-bottom: 16px;
    vertical-align: middle;
}

@media (max-width: 1079px) {
    table.o-table > tbody > tr > td {
        padding-top: 4px;
        padding-bottom: 4px;
    }
}

table.o-table > tbody > tr {
    cursor: pointer;
}

/*

table.o-table > tbody > tr {
    animation: fadeIn linear 1s;
}

@keyframes fadeIn {
    0% {
        opacity: 0;
    }
    25% {
        opacity: 0;
    }
    75% {
        opacity: 1;
    }
    100% {
        opacity: 1;
    }
}
*/

div.o-table__pagination {
    padding: 4px;
}

@media (max-width: 1079px) {
    .o-table__wrapper--mobile tr:not(.o-table--detailed):not(.o-table--empty):not(.o-table__footer) td:first-child,
    .o-table__wrapper--mobile tr:not(.o-table--detailed):not(.o-table--empty):not(.o-table__footer) td:not(:first-child):not(:last-child) {
        border-bottom: 0;
        border-top: 0;
        background-color: var(--background-tertiary);
    }

    .o-table__wrapper--mobile tr:not(.o-table--detailed):not(.o-table--empty):not(.o-table__footer) td:last-child {
        border-top: 0;
        border-bottom: 1px solid var(--border-secondary);
        background-color: var(--background-tertiary);
        padding-bottom: 1rem;
    }

    .o-table__wrapper--mobile tr:not(.o-table--detailed):not(.o-table--empty):not(.o-table__footer) td:first-child:hover,
    .o-table__wrapper--mobile tr:not(.o-table--detailed):not(.o-table--empty):not(.o-table__footer) td:not(:first-child):not(:last-child):hover,
    .o-table__wrapper--mobile tr:not(.o-table--detailed):not(.o-table--empty):not(.o-table__footer) td:last-child:hover {
        background-color: var(--background-primary);
    }

    .o-table__wrapper--mobile tr:not(.o-table--detailed):not(.o-table--empty):not(.o-table__footer) td:before {
        color: var(--text-secondary);
        font-size: 12px;
        font-weight: 500;
    }
}

/*
    Fix Bulma / Oruga conflict

    In Bulma, rules:
        table td:not([align]), table th:not([align]) {
            text-align: inherit;
        }
        td:not([align]), th:not([align]) {
            text-align: inherit;
        }
    break Oruga table setting:
        o-table-column with position="right"
    This prevents right alignment because Bulma rules above take precedence over generated classes:
        o-table__td--right
        o-table__th--right
    (why?)

    Rules below restore the correct precedence.
 */
table.o-table {
    text-align: left;
}

table.o-table td.o-table__td--right,
table.o-table th.o-table__th--right {
    text-align: right;
}

table.o-table td.o-table__td--left,
table.o-table th.o-table__th--left {
    text-align: left;
}

